--- a/hara.am
+++ b/hara.am
@@ -4,4 +4,9 @@ dfdfds
 sdfsdfs
 endmacro
 m3sdgfdsfffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
+macro mov
+dfdfds
+sdfsdfs
+endmacro
 m1
+jo3der: mov hara,r2
