--- a/hara.am
+++ b/hara.am
@@ -1,12 +1,15 @@
 hara
-macro m3sdgfdsfffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
 dfdfds
 sdfsdfs
-endmacro
-m3sdgfdsfffffffffffffffffffffffffffffffffffffffffffffffffffffffffff
 macro mov
 dfdfds
 sdfsdfs
 endmacro
 m1
 jo3der: mov hara,r2
+jo4der: mov r3, r4
+jo5der: mov r5 ,r6
+jo6der: mov hara
+jo7der: mov hara.1,r2
+jo8der: cmp	hara.2,rr
+jo9der: add hara.3,rr
