--- a/hara.am
+++ b/hara.am
@@ -1,15 +1,14 @@
-hara
-dfdfds
-sdfsdfs
-macro mov
-dfdfds
-sdfsdfs
-endmacro
-m1
-jo3der: mov hara,r2
-jo4der: mov r3, r4
-jo5der: mov r5 ,r6
-jo6der: mov hara
-jo7der: mov hara.1,r2
-jo8der: cmp	hara.2,rr
-jo9der: add hara.3,rr
+MAIN: 	mov S1.1 ,LENGTH
+	add r2,STR
+LOOP:	jmp END
+		prn #-5
+	sub r1, r4
+		inc	K
+		
+		mov S1.2 ,r3
+	bne LOOP
+	END:   hlt	
+STR: .string "abcdef"
+LENGTH:	.data 6, -9, 15
+K:	.data	22 
+S1:	.struct 8, "ab"
