--- a/examples/invalid/too_few_operands_for_operation.am
+++ b/examples/invalid/too_few_operands_for_operation.am
@@ -1,10 +1,9 @@
 ; dfsdf sdr4545
 .entry LOOP
 .entry LENGTH
-
-.extern W
-MAIN: 	mov W,S1.1
-	add r2,STR
+.extern W 
+MAIN: 	mov S1.1 		, W
+	add r2
 	LOOP:		jmp W
 		prn #-5
 	sub r1, r4
